// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
Array [
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 jkBeob"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        checked=""
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        type="checkbox"
      />
      <svg
        checked=""
        class="Checkboxstyles__Icon-sc-7b1pnz-1 fwBqJi"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
]
`;

exports[`Checkbox w/ any props 1`] = `
<label
  class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw className"
  id="id"
  title="title"
>
  <span
    class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
  >
    <input
      aria-invalid="false"
      class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
      name="name"
      type="checkbox"
    />
    <svg
      class="Checkboxstyles__Icon-sc-7b1pnz-1 jkBeob"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
  >
    Label
  </span>
</label>
`;

exports[`Checkbox w/ checked and disabled 1`] = `
Array [
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 fMqNTb"
    disabled=""
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        checked=""
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        checked=""
        class="Checkboxstyles__Icon-sc-7b1pnz-1 iWUwBx"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 fMqNTb"
    disabled=""
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        checked=""
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        checked=""
        class="Checkboxstyles__Icon-sc-7b1pnz-1 iWUwBx"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ disabled 1`] = `
Array [
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 fMqNTb"
    disabled=""
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 lmzwuE"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 fMqNTb"
    disabled=""
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 lmzwuE"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ invalid 1`] = `
Array [
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="true"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 iCpjgk"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="true"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 iCpjgk"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ label 1`] = `
Array [
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 jkBeob"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
    >
      Label
    </span>
  </label>,
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        checked=""
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        type="checkbox"
      />
      <svg
        checked=""
        class="Checkboxstyles__Icon-sc-7b1pnz-1 fwBqJi"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ name 1`] = `
Array [
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        class="Checkboxstyles__Icon-sc-7b1pnz-1 jkBeob"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  <label
    class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
  >
    <span
      class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
    >
      <input
        aria-invalid="false"
        checked=""
        class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        checked=""
        class="Checkboxstyles__Icon-sc-7b1pnz-1 fwBqJi"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ onChange() 1`] = `
<Checkboxstyles__Box>
  <Checkboxstyles__IconBox>
    <Checkboxstyles__Input
      aria-invalid={false}
      checked={false}
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <Checkboxstyles__Icon
      active={false}
      checked={false}
      focusable="false"
      indeterminate={false}
      size="m"
      tabIndex={-1}
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </Checkboxstyles__Icon>
  </Checkboxstyles__IconBox>
  <Checkboxstyles__Content
    size="m"
  >
    Label
  </Checkboxstyles__Content>
</Checkboxstyles__Box>
`;

exports[`Checkbox w/ size: l 1`] = `
<label
  class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
>
  <span
    class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
  >
    <input
      aria-invalid="false"
      class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
      type="checkbox"
    />
    <svg
      class="Checkboxstyles__Icon-sc-7b1pnz-1 fevQNn"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="Checkboxstyles__Content-sc-7b1pnz-2 jEfea-D"
  >
    Label
  </span>
</label>
`;

exports[`Checkbox w/ size: m 1`] = `
<label
  class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
>
  <span
    class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
  >
    <input
      aria-invalid="false"
      class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
      type="checkbox"
    />
    <svg
      class="Checkboxstyles__Icon-sc-7b1pnz-1 jkBeob"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="Checkboxstyles__Content-sc-7b1pnz-2 brKHIJ"
  >
    Label
  </span>
</label>
`;

exports[`Checkbox w/ size: s 1`] = `
<label
  class="Checkboxstyles__Box-sc-7b1pnz-3 rWrVw"
>
  <span
    class="Checkboxstyles__IconBox-sc-7b1pnz-0 iLaMGm"
  >
    <input
      aria-invalid="false"
      class="Checkboxstyles__Input-sc-7b1pnz-4 hCnUJI"
      type="checkbox"
    />
    <svg
      class="Checkboxstyles__Icon-sc-7b1pnz-1 ktXewH"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="Checkboxstyles__Content-sc-7b1pnz-2 ciTVxy"
  >
    Label
  </span>
</label>
`;
